# snake-python

./: README.md
snake/: pyproject.toml
snake-client/: pyproject.toml
snake-client/snake_client/: __init__.py  __init__.py.map  snake_client.py  snake_client.py.map
snake-game/: pyproject.toml
snake-game/snake_game/: __init__.py  __init__.py.map  snake_game.py  snake_game.py.map
snake-server/: pyproject.toml
snake-server/snake_server/: __init__.py  __init__.py.map  snake_server.py  snake_server.py.map
snake-test/: pyproject.toml
snake-test/snake_test/: __init__.py  __init__.py.map  snake_test.py  snake_test.py.map
snake-test/tests/: __init__.py.map  test_snake_test.py  test_snake_test.py.map
snake/snake/: __init__.py.map  snake.py  snake.py.map
std/temper_std/: __init__.py  __init__.py.map  io.py  io.py.map  json.py  json.py.map  net.py  net.py.map  regex.py  regex.py.map  temporal.py  temporal.py.map  testing.py  testing.py.map  ws.py  ws.py.map
temper-core/temper_core/: __init__.py
