[project]
name = "snake"
version = "0.0.1"
description = ""
readme = {text = "n/a", content-type = "text/plain"}
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [  ]

dependencies = [
    "temper-core == 0.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
